Changed the position property value to 'fixed' instead of 'absolute' to fix the overflow issue when the 'user post window' slides in. Script tag was also removed from the 'form.ejs' file to fix the MIME type scripting errors.

--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     padding: 0;
     background: linear-gradient(to right, #0F2027, #203A43, #2C5364);
-    overflow-x: hidden; 
+    overflow: hidden;
     color: #e2e8f0;
 }
 
@@ -60,6 +60,8 @@ main{
     flex-direction: column;
     align-items: center;
 
+    
+    position: relative;
     /* border: 1px solid red; */
     /* padding-left: 100px; */
 }
@@ -73,7 +75,7 @@ main{
 
     /* border: 1px solid orange; */
     min-width: 1000px;
-    max-width: 1000px;
+    /* max-width: 1000px; */
     transition: min-width 1s ease; 
 }
 .new-post-section > button{
@@ -101,7 +103,7 @@ main{
     /* border: 1px solid orange; */
     padding: 10px; 
     min-width: 1000px;
-    max-width: 1000px; 
+    /* max-width: 1000px;  */
     font-family: creato-display, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     transition: min-width 1s ease; 
 }
@@ -189,7 +191,9 @@ main{
 .user-post-window{
     position: absolute; 
     top: 0;
-    right: -1000px; 
+    /* right: -1000px;  */
+    /* bottom: 0; */
+    right: 0; 
     z-index: 1;
     height: 100%;
 
@@ -197,7 +201,8 @@ main{
     background: linear-gradient(to right, #0f20277c, #203a4380, #2c536480);
     min-width: 1000px; 
     padding: 10px; 
-    transition: min-width 1s ease; 
+
+    transition: min-width 1s ease;
 }
 .user-post-window > section:nth-child(1){ /* Close Window Section */
     /* border: 1px solid black; */
@@ -220,10 +225,10 @@ main{
 }
 @keyframes openAnimation{
     from{
-        transform: translateX(0px);
+        transform: translateX(1000px);
     }
     to{
-        transform: translateX(-700px); 
+        transform: translateX(0px); 
     }
 }
 .close-animation{
@@ -234,10 +239,10 @@ main{
 }
 @keyframes closeAnimation{
     from{
-        transform: translateX(-700px); 
+        transform: translateX(0px); 
     }
     to{
-        transform: translateX(0px); 
+        transform: translateX(1000px); 
     }
 }
 .user-post-window > section:nth-child(2){ /* New Post Section */
@@ -344,6 +349,7 @@ main{
         min-width: 500px;
         max-width: 1000px; 
         font-family: creato-display, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
         transition: min-width 1s ease; 
     }
 
@@ -355,14 +361,15 @@ main{
         /* border: 1px solid orange; */
         min-width: 560px;
         max-width: 1000px;
+
         transition: min-width 1s ease;
     }
 
     /* |New Post Window (index.ejs)| */
     .user-post-window{
-        position: absolute; 
+        position: fixed; 
         top: 0;
-        right: -1200px; 
+        right: 0; 
         z-index: 1;
         height: 100%;
 
@@ -370,22 +377,23 @@ main{
         background: linear-gradient(to right, #0f20277c, #203a4380, #2c536480);
         min-width: 100%; 
         padding: 10px; 
+
         transition: min-width 1s ease; 
     }
     @keyframes openAnimation{
         from{
-            transform: translateX(0px);
+            transform: translateX(1050px);
         }
         to{
-            transform: translateX(-1200px); 
+            transform: translateX(0px); 
         }
     }
     @keyframes closeAnimation{
         from{
-            transform: translateX(-1200px); 
+            transform: translateX(0px); 
         }
         to{
-            transform: translateX(0px); 
+            transform: translateX(1050px); 
         }
     }
 }
@@ -399,11 +407,25 @@ main{
         gap: 10px;
 
         /* border: 1px solid orange; */
-        padding: 10px; 
+        padding: 3px; 
         min-width: 100%;
-        max-width: 1000px; 
+        /* max-width: 1000px;  */
         font-family: creato-display, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
         transition: min-width 1s ease; 
+    }
+    .message-section > div{
+        display: flex;
+        flex-direction: column;
+        gap: 5px; 
+
+        border: 1px solid black;
+        background-color: rgba(0, 0, 0, 0.26);
+        border-radius: 10px; 
+        word-wrap: break-word;
+        padding: 5px; 
+    }
+    .message-section > div > div > b{
+        font-size: 17px;
     }
 
     /* |New Post Section (Plus Button)| */
@@ -413,15 +435,15 @@ main{
 
         /* border: 1px solid orange; */
         min-width: 100%;
-        max-width: 1000px;
+        /* max-width: 1000px; */
         transition: min-width 1s ease;
     }
 
     /* |New Post Window (index.ejs)| */
     .user-post-window{
-        position: absolute; 
+        position: fixed; 
         top: 0;
-        right: -1200px;
+        right: 0;
         z-index: 1;
         height: 100%;
 
@@ -429,6 +451,7 @@ main{
         background: linear-gradient(to right, #0f20277c, #203a4380, #2c536480);
         min-width: 100%;
         padding: 10px; 
+        overflow-x: hidden;
         transition: min-width 1s ease; 
     }
     .user-post-window > section:nth-child(2) > form > div > input{
@@ -457,18 +480,18 @@ main{
     }
     @keyframes openAnimation{
         from{
-            transform: translateX(0px);
+            transform: translateX(560px);
         }
         to{
-            transform: translateX(-1200px); 
+            transform: translateX(0px); 
         }
     }
     @keyframes closeAnimation{
         from{
-            transform: translateX(-1200px); 
+            transform: translateX(0px); 
         }
         to{
-            transform: translateX(0px); 
+            transform: translateX(560px); 
         }
     }
 
@@ -503,17 +526,20 @@ main{
 @media only screen and (max-width: 400px){
     /* |New Post Window (index.ejs)|*/
     .user-post-window{
-        position: absolute; 
+        position: fixed; 
         top: 0;
-        right: -1200px;
+        right: 0;
         z-index: 1;
         height: 100%;
 
         /* border: 1px solid black; */
         background: linear-gradient(to right, #0f20277c, #203a4380, #2c536480);
         min-width: 100%;
+        /* width: 100%; */
         padding: 10px; 
+        overflow-x: hidden;
         transition: min-width 1s ease; 
+        
     }
     .user-post-window > section:nth-child(2) > form > div > input{ /* Name Input */
         padding: 5px;
@@ -538,6 +564,22 @@ main{
         font-family: creato-display, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
         font-size: 15px; 
         transition: width 1s ease; 
+    }
+    @keyframes openAnimation{
+        from{
+            transform: translateX(100%);
+        }
+        to{
+            transform: translateX(0); 
+        }
+    }
+    @keyframes closeAnimation{
+        from{
+            transform: translateX(0); 
+        }
+        to{
+            transform: translateX(100%); 
+        }
     }
 
 }
